# Eigen-Robotics

./: .gitignore  DEVELOPER_README.md  DEVELOPER_TEST.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: release.yaml
docs/: 1-dependencies.md  2-project-structure.md  3-code-style.md  4-testing.md  roadmap.md
examples/communications/talker-listener/: listener.py
examples/demo_video/: global_config.yaml  global_config_genesis.yaml  global_config_pybullet.yaml  gym.ipynb  gym.py  gym_interface.py  policy.py  sim_node_g.py  sim_node_p.py  utils.py
examples/simulations/: global_config.yaml  importer.py  sim_node.py
examples/simulator_switching/: global_config.yaml  global_config_g.yaml  global_config_p.yaml  sim_node.py  sim_node_g.py  sim_node_p.py  so_101.ipynb
scripts/: build_pybullet_macos.py
src/eigen/: __init__.py
src/eigen/core/: __init__.py
src/eigen/core/client/: __init__.py
src/eigen/core/client/comm_handler/: __init__.py  comm_handler.py  listener.py  publisher.py  services.py  subscriber.py
src/eigen/core/client/comm_infrastructure/: comm_endpoint.py  endpoint.py  registry.py
src/eigen/core/config_utils/: __init__.py  load_config.py
src/eigen/core/tools/: __init__.py
src/eigen/core/tools/logging/: log.py
src/eigen/framework/cli/: main.py  readme.md  robot.py  sensor.py
src/eigen/framework/core/client/comm_handler/: service.py
src/eigen/framework/core/client/comm_infrastructure/: comm_endpoint.py  endpoint.py
src/eigen/framework/core/system/simulation/: simulator_node.py
src/eigen/framework/core/utils/: driver_loader.py  utils.py
src/eigen/framework/gym/: eigen_env.py  spaces.py
src/eigen/framework/sim/genesis/: genesis_backend.py  genesis_camera_driver.py  genesis_multibody.py  genesis_robot_driver.py
src/eigen/framework/sim/pybullet/: pybullet_backend.py  pybullet_robot_driver.py
src/eigen/framework/types/: Makefile
src/eigen/framework/types/eigen_type_defs/: default_pybullet_t.lcm  default_structs.lcm  grid_t.lcm  info_t.lcm  lidar.lcm  robot_t.lcm  sensor_t.lcm
src/eigen/robots/franka_panda/: franka_driver.py  franka_pybullet_driver.py  panda.yaml
src/eigen/robots/so100/: so100.py  so100_driver.py
src/eigen/sensors/camera/: __init__.py  camera.py  camera_driver.py
src/eigen/types/: README.md  __init__.py  lcm_gen.py  test.lcm
src/eigen/types/definitions/: std.lcm
src/eigen_robotics/: README.md  __init__.py
tests/: test_core.py  test_imports.py  test_namespace_packages.py  test_versioning.py
tests/cli/: test_components.py
tests/core/: test_system_component_registry.py
tests/robots/: test_franka.py  test_robot_integration.py
tests/test_core_lib/: test_comm_handler.py  test_core_imports.py
tests/test_core_lib/test_client/: test_comm_handler.py  test_core_imports.py
tests/test_core_lib/test_config_utils/: test_config_loading.py
tests/test_core_lib/test_config_utils/configs/cycle_config/: global_config.yaml  network.yaml
tests/test_core_lib/test_config_utils/configs/nested_config/: global_config.yaml  network_config.yaml
tests/test_core_lib/test_config_utils/configs/whole_config/: global_config.yaml
tests/test_tools_lib/: test_tools.py
tests/test_types/: test_types.py
tests/tests_types/: test_type_imports.py
