[project]
name = "eigen-robotics"
version = "0.2.0"
description = "Python-first, ML-native robotics framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# core deps everyone gets
dependencies = [
  "lcm>=1.5.2",
  "numpy>=1.26",
  "pydantic>=2",
]

# this is the important bit
[project.optional-dependencies]
mujoco = [
  "mujoco>=3.1.5",
]
genesis = [
  "genesis-world",
]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "src",
]
pythonpath = [
  "src",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]

[tool.uv.workspace]
members = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src/eigen_robotics", "src/eigen"]
include = ["LICENSE", "README.md"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
]
