[project]
name = "eigen-robotics"
version = "0.2.0"
description = "Python-first, ML-native robotics framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "lcm>=1.5.2",
  "numpy>=1.26",
  "omegaconf>=2.3.0",
  "pydantic>=2",
]

[project.optional-dependencies]
mujoco = [
  "mujoco>=3.1.5",
]
genesis = [
  "genesis-world",
]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# tell hatch: the code is in src/eigen
[tool.hatch.build.targets.wheel]
packages = ["src/eigen"]
include = ["LICENSE", "README.md"]

# pytest config
[tool.pytest.ini_options]
testpaths = [
  "tests",
  "src",
]
pythonpath = [
  "src",
]
